--- a/.classpath
+++ b/.classpath
@@ -1,40 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="optional" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
-			<attribute name="optional" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/main/resources"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar" sourcepath="M2_REPO/junit/junit/3.8.1/junit-3.8.1-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-net/5.5/activej-net-5.5.jar" sourcepath="M2_REPO/io/activej/activej-net/5.5/activej-net-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-promise/5.5/activej-promise-5.5.jar" sourcepath="M2_REPO/io/activej/activej-promise/5.5/activej-promise-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-eventloop/5.5/activej-eventloop-5.5.jar" sourcepath="M2_REPO/io/activej/activej-eventloop/5.5/activej-eventloop-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-common/5.5/activej-common-5.5.jar" sourcepath="M2_REPO/io/activej/activej-common/5.5/activej-common-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-types/5.5/activej-types-5.5.jar" sourcepath="M2_REPO/io/activej/activej-types/5.5/activej-types-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jetbrains/annotations/17.0.0/annotations-17.0.0.jar" sourcepath="M2_REPO/org/jetbrains/annotations/17.0.0/annotations-17.0.0-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/2.0.3/slf4j-api-2.0.3.jar" sourcepath="M2_REPO/org/slf4j/slf4j-api/2.0.3/slf4j-api-2.0.3-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-jmx-stats/5.5/activej-jmx-stats-5.5.jar" sourcepath="M2_REPO/io/activej/activej-jmx-stats/5.5/activej-jmx-stats-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-jmxapi/5.5/activej-jmxapi-5.5.jar" sourcepath="M2_REPO/io/activej/activej-jmxapi/5.5/activej-jmxapi-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-bytebuf/5.5/activej-bytebuf-5.5.jar" sourcepath="M2_REPO/io/activej/activej-bytebuf/5.5/activej-bytebuf-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-csp/5.5/activej-csp-5.5.jar" sourcepath="M2_REPO/io/activej/activej-csp/5.5/activej-csp-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-datastream/5.5/activej-datastream-5.5.jar" sourcepath="M2_REPO/io/activej/activej-datastream/5.5/activej-datastream-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-serializer/5.5/activej-serializer-5.5.jar" sourcepath="M2_REPO/io/activej/activej-serializer/5.5/activej-serializer-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-codegen/5.5/activej-codegen-5.5.jar" sourcepath="M2_REPO/io/activej/activej-codegen/5.5/activej-codegen-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm/9.4/asm-9.4.jar" sourcepath="M2_REPO/org/ow2/asm/asm/9.4/asm-9.4-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-commons/9.4/asm-commons-9.4.jar" sourcepath="M2_REPO/org/ow2/asm/asm-commons/9.4/asm-commons-9.4-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-tree/9.2/asm-tree-9.2.jar" sourcepath="M2_REPO/org/ow2/asm/asm-tree/9.2/asm-tree-9.2-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/activej/activej-inject/5.5/activej-inject-5.5.jar" sourcepath="M2_REPO/io/activej/activej-inject/5.5/activej-inject-5.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-classic/1.3.8/logback-classic-1.3.8.jar" sourcepath="M2_REPO/ch/qos/logback/logback-classic/1.3.8/logback-classic-1.3.8-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-core/1.3.8/logback-core-1.3.8.jar" sourcepath="M2_REPO/ch/qos/logback/logback-core/1.3.8/logback-core-1.3.8-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/datastax/oss/java-driver-core/4.17.0/java-driver-core-4.17.0.jar" sourcepath="M2_REPO/com/datastax/oss/java-driver-core/4.17.0/java-driver-core-4.17.0-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/datastax/oss/native-protocol/1.5.1/native-protocol-1.5.1.jar" sourcepath="M2_REPO/com/datastax/oss/native-protocol/1.5.1/native-protocol-1.5.1-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/netty/netty-handler/4.1.94.Final/netty-handler-4.1.94.Final.jar" sourcepath="M2_REPO/io/netty/netty-handler/4.1.94.Final/netty-handler-4.1.94.Final-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/netty/netty-common/4.1.94.Final/netty-common-4.1.94.Final.jar" sourcepath="M2_REPO/io/netty/netty-common/4.1.94.Final/netty-common-4.1.94.Final-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/netty/netty-resolver/4.1.94.Final/netty-resolver-4.1.94.Final.jar" sourcepath="M2_REPO/io/netty/netty-resolver/4.1.94.Final/netty-resolver-4.1.94.Final-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/netty/netty-buffer/4.1.94.Final/netty-buffer-4.1.94.Final.jar" sourcepath="M2_REPO/io/netty/netty-buffer/4.1.94.Final/netty-buffer-4.1.94.Final-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/netty/netty-transport/4.1.94.Final/netty-transport-4.1.94.Final.jar" sourcepath="M2_REPO/io/netty/netty-transport/4.1.94.Final/netty-transport-4.1.94.Final-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/netty/netty-transport-native-unix-common/4.1.94.Final/netty-transport-native-unix-common-4.1.94.Final.jar" sourcepath="M2_REPO/io/netty/netty-transport-native-unix-common/4.1.94.Final/netty-transport-native-unix-common-4.1.94.Final-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/netty/netty-codec/4.1.94.Final/netty-codec-4.1.94.Final.jar" sourcepath="M2_REPO/io/netty/netty-codec/4.1.94.Final/netty-codec-4.1.94.Final-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/datastax/oss/java-driver-shaded-guava/25.1-jre-graal-sub-1/java-driver-shaded-guava-25.1-jre-graal-sub-1.jar" sourcepath="M2_REPO/com/datastax/oss/java-driver-shaded-guava/25.1-jre-graal-sub-1/java-driver-shaded-guava-25.1-jre-graal-sub-1-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/typesafe/config/1.4.1/config-1.4.1.jar" sourcepath="M2_REPO/com/typesafe/config/1.4.1/config-1.4.1-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/github/jnr/jnr-posix/3.1.15/jnr-posix-3.1.15.jar" sourcepath="M2_REPO/com/github/jnr/jnr-posix/3.1.15/jnr-posix-3.1.15-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/github/jnr/jnr-ffi/2.2.11/jnr-ffi-2.2.11.jar" sourcepath="M2_REPO/com/github/jnr/jnr-ffi/2.2.11/jnr-ffi-2.2.11-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/github/jnr/jffi/1.3.9/jffi-1.3.9.jar" sourcepath="M2_REPO/com/github/jnr/jffi/1.3.9/jffi-1.3.9-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/github/jnr/jffi/1.3.9/jffi-1.3.9-native.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-analysis/9.2/asm-analysis-9.2.jar" sourcepath="M2_REPO/org/ow2/asm/asm-analysis/9.2/asm-analysis-9.2-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-util/9.2/asm-util-9.2.jar" sourcepath="M2_REPO/org/ow2/asm/asm-util/9.2/asm-util-9.2-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/github/jnr/jnr-a64asm/1.0.0/jnr-a64asm-1.0.0.jar" sourcepath="M2_REPO/com/github/jnr/jnr-a64asm/1.0.0/jnr-a64asm-1.0.0-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/github/jnr/jnr-x86asm/1.0.2/jnr-x86asm-1.0.2.jar" sourcepath="M2_REPO/com/github/jnr/jnr-x86asm/1.0.2/jnr-x86asm-1.0.2-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/github/jnr/jnr-constants/0.10.3/jnr-constants-0.10.3.jar" sourcepath="M2_REPO/com/github/jnr/jnr-constants/0.10.3/jnr-constants-0.10.3-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/dropwizard/metrics/metrics-core/4.1.18/metrics-core-4.1.18.jar" sourcepath="M2_REPO/io/dropwizard/metrics/metrics-core/4.1.18/metrics-core-4.1.18-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/hdrhistogram/HdrHistogram/2.1.12/HdrHistogram-2.1.12.jar" sourcepath="M2_REPO/org/hdrhistogram/HdrHistogram/2.1.12/HdrHistogram-2.1.12-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.17.2/jackson-core-2.17.2.jar" sourcepath="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.17.2/jackson-core-2.17.2-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-databind/2.17.2/jackson-databind-2.17.2.jar" sourcepath="M2_REPO/com/fasterxml/jackson/core/jackson-databind/2.17.2/jackson-databind-2.17.2-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-annotations/2.17.2/jackson-annotations-2.17.2.jar" sourcepath="M2_REPO/com/fasterxml/jackson/core/jackson-annotations/2.17.2/jackson-annotations-2.17.2-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/reactivestreams/reactive-streams/1.0.3/reactive-streams-1.0.3.jar" sourcepath="M2_REPO/org/reactivestreams/reactive-streams/1.0.3/reactive-streams-1.0.3-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/github/stephenc/jcip/jcip-annotations/1.0-1/jcip-annotations-1.0-1.jar" sourcepath="M2_REPO/com/github/stephenc/jcip/jcip-annotations/1.0-1/jcip-annotations-1.0-1-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/github/spotbugs/spotbugs-annotations/3.1.12/spotbugs-annotations-3.1.12.jar" sourcepath="M2_REPO/com/github/spotbugs/spotbugs-annotations/3.1.12/spotbugs-annotations-3.1.12-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/google/code/findbugs/jsr305/3.0.2/jsr305-3.0.2.jar" sourcepath="M2_REPO/com/google/code/findbugs/jsr305/3.0.2/jsr305-3.0.2-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/projectlombok/lombok/1.18.34/lombok-1.18.34.jar" sourcepath="M2_REPO/org/projectlombok/lombok/1.18.34/lombok-1.18.34-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/datatype/jackson-datatype-jsr310/2.17.2/jackson-datatype-jsr310-2.17.2.jar" sourcepath="M2_REPO/com/fasterxml/jackson/datatype/jackson-datatype-jsr310/2.17.2/jackson-datatype-jsr310-2.17.2-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/n52/jackson/jackson-datatype-jts/1.2.10/jackson-datatype-jts-1.2.10.jar" sourcepath="M2_REPO/org/n52/jackson/jackson-datatype-jts/1.2.10/jackson-datatype-jts-1.2.10-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/locationtech/jts/jts-core/1.19.0/jts-core-1.19.0.jar" sourcepath="M2_REPO/org/locationtech/jts/jts-core/1.19.0/jts-core-1.19.0-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/uber/h3/4.1.1/h3-4.1.1.jar" sourcepath="M2_REPO/com/uber/h3/4.1.1/h3-4.1.1-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/microsoft/sqlserver/mssql-jdbc/12.8.1.jre11/mssql-jdbc-12.8.1.jre11.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/zaxxer/HikariCP/5.1.0/HikariCP-5.1.0.jar" sourcepath="M2_REPO/com/zaxxer/HikariCP/5.1.0/HikariCP-5.1.0-sources.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
