--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,141 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven-plugin-tools.version>3.13.1</maven-plugin-tools.version>
   </properties>
-
-  <dependencies>
+ <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    		<groupId>io.activej</groupId>
+    		<artifactId>activej-net</artifactId>
+    		<version>5.5</version>
+	</dependency>
+	<dependency>
+    		<groupId>io.activej</groupId>
+    		<artifactId>activej-csp</artifactId>
+    		<version>5.5</version>
+	</dependency>
+	<dependency>
+    		<groupId>io.activej</groupId>
+    		<artifactId>activej-datastream</artifactId>
+    		<version>5.5</version>
+	</dependency>
+	<dependency>
+    		<groupId>io.activej</groupId>
+    		<artifactId>activej-inject</artifactId>
+    		<version>5.5</version>
+	</dependency>
+	<dependency>
+    		<groupId>ch.qos.logback</groupId>
+    		<artifactId>logback-classic</artifactId>
+    		<version>1.3.8</version>
+	</dependency>
+
+	<dependency>
+  		<groupId>com.datastax.oss</groupId>
+  		<artifactId>java-driver-core</artifactId>
+  		<version>4.17.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <version>1.18.34</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-core</artifactId>
+    	<version>2.17.2</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-databind</artifactId>
+    	<version>2.17.2</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-annotations</artifactId>
+    	<version>2.17.2</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.fasterxml.jackson.datatype</groupId>
+    	<artifactId>jackson-datatype-jsr310</artifactId>
+    	<version>2.17.2</version>
+	</dependency>
+	<dependency>
+    	<groupId>org.n52.jackson</groupId>
+    	<artifactId>jackson-datatype-jts</artifactId>
+    	<version>1.2.10</version>
+	</dependency>
+	<dependency>
+  		<groupId>org.jetbrains</groupId>
+  		<artifactId>annotations</artifactId>
+  		<version>17.0.0</version>
+  		<scope>compile</scope>
+	</dependency>
+	<dependency>
+  		<groupId>org.locationtech.jts</groupId>
+  		<artifactId>jts-core</artifactId>
+  		<version>1.19.0</version>
+	</dependency>
+	<dependency>
+  		<groupId>com.uber</groupId>
+  		<artifactId>h3</artifactId>
+  		<version>4.1.1</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.microsoft.sqlserver</groupId>
+    	<artifactId>mssql-jdbc</artifactId>
+    	<version>12.8.1.jre11</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.zaxxer</groupId>
+    	<artifactId>HikariCP</artifactId>
+    	<version>5.1.0</version>
+	</dependency>
   </dependencies>
+  
+  <build>
+	<plugins>
+		<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-jar-plugin</artifactId>
+			  <version>3.2.2</version>
+			  <configuration>
+				  <archive>
+					  <addMavenDescriptor>false</addMavenDescriptor>
+					  <manifest>
+						  <addClasspath>true</addClasspath>
+						  <classpathPrefix>libs/</classpathPrefix>
+						  <mainClass>com.pz.ffc.newffc.Main</mainClass>
+					  </manifest>
+				  </archive>
+			  </configuration>
+		  </plugin>
+		  <plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-dependency-plugin</artifactId>
+			    <executions>
+			        <execution>
+			            <id>copy-dependencies</id>
+			            <phase>prepare-package</phase>
+			            <goals>
+			                <goal>copy-dependencies</goal>
+			            </goals>
+			            <configuration>
+			                <outputDirectory>
+			                    ${project.build.directory}/libs
+			                </outputDirectory>
+			            </configuration>
+			        </execution>
+			    </executions>
+		  </plugin>
+
+	</plugins>
+  </build>
+
 </project>
